# kiran-gtk-theme

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.en.md  README.md
KiranNew/: index.theme
KiranNew-dark/: index.theme
KiranNew-dark/gtk-3.0/: assets  gtk.css  widgets
KiranNew/gtk-3.0/: gtk-dark.css  gtk.css
KiranNew/gtk-3.0/widgets/: base.css  button.css  color-chooser.css  combox.css  common.css  display.css  entry.css  layout.css  misc.css  progressbar.css  scroll.css  sidebar.css  textview.css  toolbar.css  treeview.css
cmake/: FindKGT.cmake  FindPythonCairo.cmake
gtk-2.0/: gtkrc
src/: CMakeLists.txt  build-theme.sh  globals.py  index.theme  index.theme.dark  index.theme.light  render_assets.py  render_metacity.py
src/colors/: dark.colors  light.colors  metacity_dark.colors  metacity_light.colors
src/dark-metacity-1/: metacity-theme-2.xml
src/gtk2/: apps.rc  gtkrc  main.rc
src/gtk2/menubar-toolbar/: menubar-toolbar.rc
src/gtk3/: _functions.scss  colors-dark.scss  colors-light.scss  functions.scss  gtk.scss
src/gtk3/applications/: _kiranpanel.scss  _matepanel.scss
src/gtk3/widgets/: _app-notifications.scss  _assistant.scss  _base.scss  _button.scss  _calendar.scss  _checkboxes.scss  _color-chooser.scss  _colors-public.scss  _dialogs.scss  _display.scss  _entry.scss  _headerbar.scss  _infobar.scss  _layout.scss  _link.scss  _lists.scss  _menus.scss  _misc.scss  _notebook.scss  _overshoot.scss  _pathbar.scss  _progressbar.scss  _scale.scss  _scroll.scss  _scrollbar.scss  _sidebar.scss  _spinbutton.scss  _stackswitcher.scss  _switch.scss  _textview.scss  _toolbar.scss  _tooltips.scss  _treeview.scss  _window_decorations.scss  base.scss  button.scss  color-chooser.scss  combox.scss  common.scss  display.scss  (+2 more)
src/light-metacity-1/: metacity-theme-3.xml
src/metacity-1/: metacity-theme-1.xml  metacity-theme-2.xml  metacity-theme-3.xml
